; ModuleID = '/home/carl/AnghaBench/git/extr_imap-send.c_read_message.c'
source_filename = "/home/carl/AnghaBench/git/extr_imap-send.c_read_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@CHUNKSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.strbuf*)* @read_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_message(i32* %0, %struct.strbuf* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.strbuf*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.strbuf* %1, %struct.strbuf** %4, align 8
  br label %5

5:                                                ; preds = %13, %2
  %6 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %7 = load i32, i32* @CHUNKSIZE, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @strbuf_fread(%struct.strbuf* %6, i32 %7, i32* %8)
  %10 = icmp sle i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %5
  br label %18

12:                                               ; preds = %5
  br label %13

13:                                               ; preds = %12
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @feof(i32* %14)
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  br i1 %17, label %5, label %18

18:                                               ; preds = %13, %11
  %19 = load i32*, i32** %3, align 8
  %20 = call i64 @ferror(i32* %19)
  %21 = icmp ne i64 %20, 0
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 -1, i32 0
  ret i32 %23
}

declare dso_local i64 @strbuf_fread(%struct.strbuf*, i32, i32*) #1

declare dso_local i32 @feof(i32*) #1

declare dso_local i64 @ferror(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
